corrected the overflow on the screen for all pages

--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -7,6 +7,7 @@ body {
     height: 700px;
     position: relative;
     top: 350px;
+    overflow-x: hidden;
 }
 
 .first-btn {
